--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-  canvas, img {
+  canvas {
     position: absolute;
     top:0px;
     left:0px;
@@ -18,8 +18,20 @@
 
 #RegionMap {
   left: 250px;
+  top: 100px;
   position: absolute;
 }
+
+
+  #animalBox {
+    width:230px;
+    height: 100%;
+    position: absolute;
+    top:150px;
+    left:20px;
+    background: grey;
+
+  }
 
   #infobox {
     width:250px;
@@ -29,6 +41,27 @@
     left:0px;
     background: grey;
   }
+
+  #optionbox {
+    width:700px;
+    height: 100px;
+    position: absolute;
+    top:0px;
+    left:250px;
+    background: grey;
+    margin:0px;
+    padding: 0px;
+  }
+
+
+  #optionbox img {
+    position: relative;
+    padding: 0px;
+    margin: 0px;
+        box-sizing: border-box; /* Ensure padding doesn't affect dimensions */
+  }
+
+
 
   #infobox h4 {
     padding: 50px;
