--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   #animalBox {
     width:230px;
-    height: 100%;
+    height: 50%;
     position: absolute;
     top:150px;
     left:20px;
@@ -51,6 +51,8 @@
     background: grey;
     margin:0px;
     padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
   }
 
 
