--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
   position: absolute;
 }
 
+#mapImg {
+  width: 250px;
+}
+
 
   #animalBox {
     width:230px;
-    height: 50%;
-    position: absolute;
-    top:150px;
+    height:200px;
+    position: relative;
     left:20px;
     background: grey;
-
+    overflow: scroll;
   }
 
   #infobox {
