--- a/index.html
+++ b/index.html
@@ -114,25 +114,30 @@
     left: 0%;
   }
   #RegionMap {
-    top: 30%;
+    top: 72%;
     left: 0%;
     width: 100%;
+    max-height: 25%;
+    height: auto;
+    position: absolute
   }
 
   #mapImg {
     width: auto;
-    height: 50%;
-    max-width: 40%;
+    height: auto;
+    max-width: 80%;
+    max-height: 50%;
+    left: 10%;
+    position: relative;
   }
 
   #animalBox {
-  width: 50%;
-  height: 80%;
-  position: relative;
-  left: 0%;
-  background: grey;
-  overflow: scroll;
-  float: right;
+    width: 100%;
+    height: 33%;
+    position: relative;
+    left: 5%;
+    background: grey;
+    overflow: scroll;
 }
 
 }
@@ -143,7 +148,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
+    <title>Grand Worldbuilding Project</title>
 <script defer src="index_bundle.js"></script></head>
 <body>
     <div id="root"></div>
