--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+
+html, body, #root, #container {
+  width: 100%;
+  height: 100%;
+}
+
+
+#regionMap, #infobox, #optionbox {
+  position: relative;
+}
+
+#regionMap, #infobox {
+  float: left;
+
+}
+
+#optionbox {
+  float: right;
+}
+
   canvas {
     position: absolute;
     top:0px;
@@ -18,14 +38,13 @@
 }
 
 #RegionMap {
-  top: 20%;
-  position: absolute;
   left: 20%;
   width: 80%;
 }
 
 #mapImg {
   width: 100%;
+  max-height: 50%;
 }
 
 
@@ -33,7 +52,7 @@
     width: 80%;
     height: 25%;
     position: relative;
-    left: 10%;
+    padding: 10px 10px;
     background: grey;
     overflow: scroll;
   }
@@ -41,18 +60,12 @@
   #infobox {
     width:20%;
     height: 100%;
-    position: absolute;
-    top:0px;
-    left:0px;
     background: grey;
     overflow: hidden;
   }
 
   #optionbox {
     width: 35%;
-    position: absolute;
-    top: 0px;
-    left: 20%;
     background: grey;
     margin: 0px;
     padding: 0px;
