--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ html, body, #root, #container {
 
 
 </style>
+<meta http-equiv="Cache-Control" content="no-cache, must-revalidate, max-age=0" />
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
